--- a/src/app/components/upload-images/upload-images.component.scss
+++ b/src/app/components/upload-images/upload-images.component.scss
@@ -1,5 +1,4 @@
 
-  
 .app {
     height: 100vh;
     display: flex;
@@ -19,7 +18,6 @@
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
   }
- 
   
   .card {
     display: flex;
@@ -58,12 +56,6 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 1rem;
-  
-    span {
-      color: #cc0000;
-      font-size: 40px;
-    }
-  
     .title {
       margin-top: 0;
     }
@@ -74,13 +66,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
-    margin-bottom: 1rem;
-    padding-bottom: 20px;
-    span {
-      color: #219653;
-      font-size: 40px;
-    }
-  
+    margin-bottom: 1rem; 
     .title {
       margin-top: 0;
     }
@@ -92,47 +78,7 @@
     min-height: 20%;
   }
 
-  .container-result {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 85%;
-    min-height: 40%;
-  }
   
-  .preview-image {
-    width: 100%;
-    height: 70%;
-    border-radius: 12px;
-  }
-  .container-url {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 5%;
-    position: relative;
-    margin-top: 2rem;
-  }
-  
-  .text-url {
-    position: absolute;
-    width: 100%;
-    height: 34px;
-    background: #f6f8fb;
-    border: 1px solid #e0e0e0;
-    box-sizing: border-box;
-    border-radius: 8px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 8px;
-    line-height: 12px;
-    text-align: center;
-    letter-spacing: -0.035em;
-    color: #4f4f4f;
-  }
-
-
 .container-dropzone {
     display: flex;
     flex-direction: column;
@@ -145,19 +91,6 @@
       width: 100%;
     }
   }
-
-  .container-card {
-    display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  }
-  .container-card .row {
-    margin: 0 auto;
-  }
-
 
   .dropzone {
     display: flex;
@@ -215,37 +148,6 @@
     color: #bdbdbd;
   }
 
-  
-  
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-.break {
-    flex-basis: 100%;
-    height: 0;
-}
-
-
-
-#drop_zone {
-    border: 5px solid blue;
-    width: 340px;
-    height: 220px;
-}
-
-
 
 .bluebutton {
     background: #2F80ED;
@@ -279,9 +181,10 @@ input[type="text"] {
   height: 1em;
   white-space: nowrap;
   font-size: 10px;
+  padding-bottom: 10px;
+  padding-top: 20px;
 
 }
-
 
 
 .check-icon {
