--- a/src/app/components/upload-images/upload-images.component.html
+++ b/src/app/components/upload-images/upload-images.component.html
@@ -12,12 +12,12 @@
     <div class="container" *ngIf="!status">
       <div class="container-title">
         <div class="container-error-message" *ngIf="!success">
-          <img src="../../../assets/images/clear.svg" class="error" alt="" />
+          <img src="assets/images/clear.svg" class="error" alt="" />
           <h3 style="padding-top: 15px;" class="title">{{message}}</h3>
         </div>
 
         <div class="container-success-message" *ngIf="success">
-          <img src="../../../assets/images/tick.svg" class="check-icon" alt="" />
+          <img src="assets/images/tick.svg" class="check-icon" alt="" />
           <h3 style="padding-top: 15px;" class="title">Uploaded Successfully!</h3>
         </div>
       </div>
